<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TakeAwayMalaysia</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_numbers">no numbers</string>
    <string name="logos">logos</string>
    <string name="logo">logo</string>
    <string name="header">header</string>
    <string name="take_away_malaysia">Take Away Malaysia</string>
    <string name="title_activity_display_about">DisplayAboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="version_1_2">Version 1.2</string>
    <string name="developed_by_shiva_narrthine">Developed by Shiva Narrthine</string>
    <string name="google_">http://gplus.to/shivanarrthine</string>
    <string name="twitter">http://twitter.com/narrthine"</string>

</resources>