<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayAboutActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/take_away_malaysia"
        android:gravity="center"
        android:src="@drawable/tamicon"
        android:padding="0dp"
        android:layout_margin="0dp" />

    <TextView
        android:id="@+id/takeawaymalaysia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:text="@string/take_away_malaysia"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/takeawaymalaysia"
        android:layout_below="@+id/takeawaymalaysia"
        android:gravity="center_horizontal"
        android:text="@string/version_1_2" />
    
    <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:layout_marginTop="19dp"
        android:text="@string/developed_by_shiva_narrthine"
        android:gravity="center_horizontal" />
    
    <TextView
        android:id="@+id/twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gplus"
        android:text="@string/twitter"
        android:textColor="#0073FF"
        android:autoLink="web"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/gplus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer"
        android:textColor="#0073FF"
        android:autoLink="web"
        android:text="@string/google_"
        android:gravity="center_horizontal" />

</RelativeLayout>